fix width and height in html to avoid blurry render

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,4 @@
 #canvas{
   border: solid 2px blue;
-  width: 100%;
+  //width: 100%;
 }
